@@ -1,3 +1,9 @@
+2006-04-15  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
+
+	* gobject/Makefile.am: Fix pygobject installation dir: install
+	both _gobject.la and __init__.py into
+	$(pyexecdir)/gtk-2.0/gobject.
+
 2006-04-11  Johan Dahlin  <jdahlin@async.com.br>
 
 	* gobject/gobjectmodule.c (init_gobject): 
